backend/frontend: allow commenting on tracks
